--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,5 @@
 @tailwind base;
-@tailwind componenents;
+@tailwind components;
 @tailwind utilities;
 
 html,
@@ -21,5 +21,84 @@ a {
 
 @font-face {
   font-family: "burtons";
-  src: url("../public/Burtons.otf")
+  src: url("../public/Burtons.otf");
+}
+
+@layer utilities {
+  .nav-menu {
+    z-index: 2;
+    background-color: #ffffff;
+    width: 250px;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: -100%;
+    transition: 850ms;
+  }
+
+  .nav-menu.active {
+    left: 0;
+    transition: 350ms;
+  }
+
+  .nav-menu.dark {
+    background-color: #111111;
+  }
+
+  .nav-menu-items {
+    width: 100%;
+  }
+
+  .nav-text {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    padding: 8px 0px 8px 16px;
+    list-style: none;
+    height: 60px;
+  }
+
+  .nav-text a {
+    text-decoration: none;
+    color: #f5f5f5;
+    font-size: 18px;
+    width: 95%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    padding: 0 16px;
+    border-radius: 4px;
+  }
+
+  .overlay {
+    z-index: 1;
+    position: fixed;
+    top: 0;
+    visibility: hidden;
+    width: 100%;
+    height: 100%;
+    opacity: 0%;
+    background-color: rgba(0, 0, 0, 0.5);
+    transition: 350ms;
+  }
+
+  .overlay.active {
+    visibility: visible;
+    opacity: 100%;
+    transition: 500ms;
+  }
+
+  .menu-bars {
+    margin-left: 2.5rem;
+    background: none;
+  }
+
+  .navbar-toggle {
+    background-color: #060b26;
+    width: 100%;
+    height: 80px;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+  }
 }
