--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,6 +25,46 @@ a {
 }
 
 @layer utilities {
+  .nav-menu-big {
+    color: #00000;
+    border-radius: 0.375rem;
+    font-size: 1rem; /* 14px */
+    line-height: 1.25rem; /* 20px */
+    padding-top: 0.5rem /* 8px */;
+    padding-bottom: 0.5rem /* 8px */;
+    padding-left: 1.75rem /* 28px */;
+    padding-right: 1.75rem /* 28px */;
+    transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+  }
+
+  .nav-menu-big.dark-active {
+    color: #60a5fa;
+  }
+
+  .nav-menu-big.active {
+    color: #2563eb;
+  }
+
+  .nav-menu-big.dark {
+    color: #ffffff;
+  }
+
+  .nav-menu-big:hover {
+    background-color: #e5e7eb;
+  }
+
+  .nav-menu-big.dark:hover {
+    background-color: #374151;
+  }
+
+  .nav-menu-big.active:hover {
+    background-color: #e5e7eb;
+  }
+
+  .nav-menu-big.dark-active:hover {
+    background-color: #374151;
+  }
+
   .nav-menu {
     z-index: 2;
     background-color: #ffffff;
