--- a/styles/globals.css
+++ b/styles/globals.css
@@ -121,6 +121,7 @@ a {
     z-index: 1;
     position: fixed;
     top: 0;
+    left: 0;
     visibility: hidden;
     width: 100%;
     height: 100%;
@@ -133,6 +134,7 @@ a {
     visibility: visible;
     opacity: 100%;
     transition: 500ms;
+    backdrop-filter: blur(2px);
   }
 
   .menu-bars {
