--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,14 +22,17 @@ a {
 @layer utilities {
   .nav-menu-big {
     color: #00000;
-    border-radius: 0.375rem;
+    border-radius: 0.5rem;
     font-size: 1rem; /* 14px */
+    font-family: Poppins;
     line-height: 1.25rem; /* 20px */
     padding-top: 0.5rem /* 8px */;
     padding-bottom: 0.5rem /* 8px */;
-    padding-left: 1.75rem /* 28px */;
-    padding-right: 1.75rem /* 28px */;
-    transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+    padding-left: 1.5rem /* 24px */;
+    padding-right: 1.5rem /* 24px */;
+    margin-left: 0.25rem /* 24px */;
+    margin-right: 0.25rem /* 24px */;
+    transition: 250ms;
   }
 
   .nav-menu-big.dark-active {
@@ -85,6 +88,7 @@ a {
   }
 
   .nav-text {
+    font-family: Poppins;
     display: flex;
     justify-content: flex-start;
     align-items: center;
