--- a/styles/globals.css
+++ b/styles/globals.css
@@ -346,4 +346,35 @@ a {
   .project-image-overlay.dark {
     background-color: rgba(30, 58, 138, 0.95);
   }
+
+  .btn-resume {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    justify-content: center;
+    width: 6rem; /* 96px */
+    margin-top: 1.25rem /* 20px */;
+    margin-bottom: 1.25rem /* 20px */;
+    background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+    border-radius: 0.5rem /* 8px */;
+    padding-left: 1.75rem /* 28px */;
+    padding-right: 1.75rem /* 28px */;
+    padding-top: 0.5rem /* 8px */;
+    padding-bottom: 0.5rem /* 8px */;
+    color: white;
+  }
+
+  .btn-resume:hover {
+    background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+  }
+
+  .btn-resume.dark {
+    color: black;
+    background-color: rgb(96 165 250);
+  }
+
+  .btn-resume.dark:hover {
+    background-color: rgb(147 197 253);
+  }
 }
